# autoclaw-theater

./: .gitignore  LICENSE  README.md  pyproject.toml
autoclaw_theater/: __init__.py  clone_voice.py  generate_phrase_cache.py  server.py  voicelab.py
autoclaw_theater/voices/: README.txt
autoclaw_theater/voices/chandler-joey/: README.txt
autoclaw_theater/voices/dwight-jim/: README.txt
autoclaw_theater/voices/gilfoyle-dinesh/: README.txt
autoclaw_theater/voices/jesse-walter/: README.txt
autoclaw_theater/voices/professor-bug/: README.txt
autoclaw_theater/voices/rick-morty/: README.txt
autoclaw_theater/voices/sherlock-watson/: README.txt
autoclaw_theater/voices/tony-jarvis/: README.txt
